  to the home directory
- Improved undo
- Pressing Tab while there is a selection will now only shift the line's
  leading indent if the selection spans more than one line
- If indent on tab is enabled, a line will only be indented if Tab is
  pressed inside the leading whitespace of that line. Indent on tab is
  now enabled by default

+ Bug Fixes

- Fixed a memory leak with the search and replace dialog box
- Undo would be broken after a file was reloaded
- Fixed exception thrown if a buffer contained definitions for integer
  properties (tab size, maximum line length, ...)
- Changing the gutter font didn't update the gutter width
- Fixed broken scrolling behavior
- Some files would open with only one line visible
- MiscUtilities.compareStrings() would throw exceptions with strings
  that contained embedded numbers larger than 2^31
- Creating a new view or splitting the view didn't work
- Tool bar tooltips were broken
- With the Windows look and feel, file names were invisible in the file
  system browser
- In the help viewer, the top-level user's guide link was broken
- BufferChangeAdapter didn't properly implement BufferChangeListener
  interface (Maik Schreiber)
- When the text area lost focus, the bracket scope indicator in the
  gutter was not repainted
- GUIUtilities.loadToolButton() no longer throws an exception with
  invalid tool bar buttons
- It was not possible to bind an action to a non-alphanumeric key
  without any modifiers
- The file system browser's notion of the current directory is not
  changed until the directory is actually loaded successfully
- Some directories could not be deleted from the favorites
- It is no longer possible to add the same directory to the favorites
  twice
- File->Current Directory menu now shows 'No Files' if there are no
  files in the current directory
- Fixed a few bugs in the File System Browser->Colors option pane
- Compound edits were rather buggy
- 'Trailing EOL' setting did not work